Set sdk as required package, fix indentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,13 +28,12 @@ target_link_libraries(${PROJECT_NAME} ${CERES_LIBRARIES})
 # Find K4A
 option(USE_AZURE_KINECT "Use Azure Kinect" ON)
 if(USE_AZURE_KINECT)
-
-find_package(K4A)
-if(K4A_FOUND)
-  option(USE_AZURE_KINECT "Use Azure Kinect" ON)
-  target_link_libraries(${PROJECT_NAME} k4a::k4a)
-else()
-  option(USE_AZURE_KINECT "Use Azure Kinect" OFF)
+	find_package(K4A REQUIRED)
+	if(K4A_FOUND)
+	  option(USE_AZURE_KINECT "Use Azure Kinect" ON)
+	  target_link_libraries(${PROJECT_NAME} k4a::k4a)
+	else()
+	  option(USE_AZURE_KINECT "Use Azure Kinect" OFF)
 endif()
 
 if(USE_AZURE_KINECT)
@@ -44,23 +43,23 @@ endif()
 option(USE_KINECT_V2 "Use Kinect V2" OFF)
 if(USE_KINECT_V2)
 	# Find Kinect SDK v2
-	find_package(KinectSDK2)
+	find_package(KinectSDK2 REQUIRED)
 
 	# Settings Kinect SDK v2
 	if(KinectSDK2_FOUND)
-	option(USE_KINECT_V2 "Use Kinect V2" ON)
-	include_directories( ${KinectSDK2_INCLUDE_DIRS} )
-	link_directories( ${KinectSDK2_LIBRARY_DIRS} )
-	target_link_libraries(${PROJECT_NAME} ${KinectSDK2_LIBRARIES} )
-	add_custom_command( TARGET ${PROJECT_NAME} POST_BUILD ${KinectSDK2_COMMANDS} )
-	else()
-	option(USE_KINECT_V2 "Use Kinect V2" OFF)
-	endif()
+		option(USE_KINECT_V2 "Use Kinect V2" ON)
+		include_directories( ${KinectSDK2_INCLUDE_DIRS} )
+		link_directories( ${KinectSDK2_LIBRARY_DIRS} )
+		target_link_libraries(${PROJECT_NAME} ${KinectSDK2_LIBRARIES} )
+		add_custom_command( TARGET ${PROJECT_NAME} POST_BUILD ${KinectSDK2_COMMANDS} )
+		else()
+		option(USE_KINECT_V2 "Use Kinect V2" OFF)
+		endif()
 
-	if(USE_KINECT_V2)
-	add_definitions(-DENABLE_KINECT_V2)
+		if(USE_KINECT_V2)
+		add_definitions(-DENABLE_KINECT_V2)
+		endif()
 	endif()
-endif()
 endif()
 
 set(OpenPose_DIR "" CACHE PATH "")
