--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,8 @@ if(USE_AZURE_KINECT)
 	  target_link_libraries(${PROJECT_NAME} k4a::k4a)
 	else()
 	  option(USE_AZURE_KINECT "Use Azure Kinect" OFF)
+	endif()
 endif()
-
 if(USE_AZURE_KINECT)
   add_definitions(-DENABLE_AZURE_KINECT)
 endif()
@@ -47,18 +47,17 @@ if(USE_KINECT_V2)
 
 	# Settings Kinect SDK v2
 	if(KinectSDK2_FOUND)
-		option(USE_KINECT_V2 "Use Kinect V2" ON)
+		set(USE_KINECT_V2 ON)
 		include_directories( ${KinectSDK2_INCLUDE_DIRS} )
 		link_directories( ${KinectSDK2_LIBRARY_DIRS} )
 		target_link_libraries(${PROJECT_NAME} ${KinectSDK2_LIBRARIES} )
 		add_custom_command( TARGET ${PROJECT_NAME} POST_BUILD ${KinectSDK2_COMMANDS} )
-		else()
-		option(USE_KINECT_V2 "Use Kinect V2" OFF)
-		endif()
+	else()
+		set(USE_KINECT_V2 OFF)
+	endif()
 
-		if(USE_KINECT_V2)
+	if(USE_KINECT_V2)
 		add_definitions(-DENABLE_KINECT_V2)
-		endif()
 	endif()
 endif()
 
